--- a/10.Hooks-in-React/Problems/q6_solution/package.json
+++ b/10.Hooks-in-React/Problems/q6_solution/package.json
@@ -8,28 +8,27 @@
     "type": "module"
   },
   "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "5.3.6",
     "@jest/reporters": "29.3.1",
     "@jest/test-result": "29.3.1",
     "@jest/types": "29.3.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "archiver": "^6.0.1",
-    "axios": "^1.6.2",
-    "form-data": "^4.0.0",
-    "glob": "^10.3.10",
     "jest": "29.3.1",
-    "jest-json-reporter": "1.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "5.3.6",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "jest-json-reporter": "1.2.2",
+    "axios": "^1.6.2",
+    "archiver": "^6.0.1",
+    "form-data": "^4.0.0",
+    "glob": "^10.3.10"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "ajv": "^7.2.4"
+    "@babel/runtime": "7.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,10 +36,5 @@
     "test": "react-scripts test --watchAll=false '--testResultsProcessor=<rootDir>/custom-reporter' '--silent' '--maxWorkers=2' ./",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
