--- a/11.Firebase/Problem/q2_starter/package.json
+++ b/11.Firebase/Problem/q2_starter/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "14.4.3",
     "archiver": "^6.0.1",
     "axios": "^1.6.2",
+    "firebase": "9.17.1",
     "form-data": "^4.0.0",
     "glob": "^10.3.10",
     "jest": "29.3.1",
@@ -23,7 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "5.3.6",
+    "react-toastify": "9.1.1",
     "ts-node": "10.9.1",
     "typescript": "4.9.4"
   },
