--- a/11.Firebase/Problem/q4_starter/package.json
+++ b/11.Firebase/Problem/q4_starter/package.json
@@ -8,28 +8,29 @@
     "type": "module"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
     "@jest/reporters": "29.3.1",
     "@jest/test-result": "29.3.1",
     "@jest/types": "29.3.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "jest": "29.3.1",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.4",
-    "jest-json-reporter": "1.2.2",
-    "firebase": "9.17.1",
-    "react-toastify": "9.1.1",
-    "axios": "^1.6.2",
     "archiver": "^6.0.1",
+    "axios": "^1.6.2",
+    "firebase": "9.17.1",
     "form-data": "^4.0.0",
-    "glob": "^10.3.10"
+    "glob": "^10.3.10",
+    "jest": "29.3.1",
+    "jest-json-reporter": "1.2.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "9.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8"
+    "@babel/runtime": "7.13.8",
+    "ajv": "^7.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
